--- a/less/mixins.less
+++ b/less/mixins.less
@@ -128,5 +128,4 @@
   	display:flexbox;
   	display:-ms-flexbox;
   	display:-webkit-flex;
-  	display:flex;
 }
